# stock-trader

./: .gitignore  config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-03-15-stock-day-trader.md
docs/superpowers/specs/: 2026-03-15-stock-day-trader-design.md
mql5/: ATR_Spike_Auto_Strategy.mq5
pinescript/: rsi_vwap_strategy.pine
src/stock_trader/: analysis.py  backtest.py  bulk_backtest.py  capital_com.py  cli.py  config.py  engine.py  engine_capital.py  execution.py  main.py  market_data.py  models.py  strategies.py  strategy.py  strategy_ai.py  strategy_custom.py  test_trade.py
tests/: test_analysis.py  test_config.py  test_execution.py  test_models.py  test_strategy.py
